# QtViewNavigator

./: AUTHORS.md  CMakeLists.txt  README.md  ru.auroraos.QtViewNavigator.desktop
qml/cover/: DefaultCoverPage.qml
qml/pages/: LoginPage.qml  MainPage.qml
rpm/: ru.auroraos.QtViewNavigator.changes.in  ru.auroraos.QtViewNavigator.changes.run.in  ru.auroraos.QtViewNavigator.spec
src/: main.cpp  viewmodelfacility.cpp  viewmodelfacility.h  viewnavigator.cpp  viewnavigator.h
src/enums/: enum_pages.h
src/viewmodels/: loginvm.cpp  loginvm.h
